- Weather table almost done - Problem with navbar

--- a/index.html
+++ b/index.html
@@ -1,15 +1,125 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Weather Forecast</title>
-        <link href='css/style.css' rel='stylesheet' type='text/css'/>
-        <link rel="stylesheet" href="libs/weather-icons-master/css/weather-icons.css">
-        <link href='images/weather-icon-png-16.ico' rel='shortcut icon' type='image/x-icon'/>
-    </head>
-    <body>
-        <header>Weather Forecast</header>
-        <main>
-            <i class='wi wi-night-sleet'> Sun is shining</i>
-        </main>
-    </body>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="/images/weather-icon-png-16.ico">
+    <link rel="stylesheet" href="libs/weather-icons-master/css/weather-icons.css">
+    <link rel="stylesheet" href="weather-icons-wind.css">
+    <link href='images/weather-icon-png-16.ico' rel='shortcut icon' type='image/x-icon'/>
+    <title>Weather Forecast</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="carousel.css" rel="stylesheet">
+</head>
+
+<body>
+
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+            <a class="navbar-brand" href="#">Top navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+              </ul>
+              <form class="form-inline mt-2 mt-md-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </div>
+          </nav>
+        </header>
+
+
+        <!-- Marketing messaging and featurettes
+      ================================================== -->
+        <!-- Wrap the rest of the page in another container to center all the content. -->
+
+        <div class="container marketing">
+
+            <!-- Three columns of text below the carousel -->
+            <div class="row">
+                <div class="row">
+                    <span aria-level="3" role="heading">
+                        <div>1-й мікрорайон, Харків, Харківська область</div>
+                        <div>субота 11:00</div>
+                        <div>
+                            <span>Переважно хмарно</span>
+                        </div>
+                    </span>
+                </div>
+                
+                <div class="col-lg-4">
+                    <div>
+                        <div class="container" style="max-width: 600px;">
+                            <div class="col-sm">
+                                <i class="wi wi-night-sleet" style="float:left;font-size: 75px;"></i>
+                            </div>
+                            <div class="col-sm" style="float:left;margin-top:-3px;font-size:64px">
+                                <span style="display:inline">17</span>
+                                <span style="display:none">62</span>
+                            </div>
+                            <div class="col-sm" style="float:left;font-size:20px;margin-top:6px">
+                                <span aria-label="°Celsius">°C</span>        
+                            </div>
+                            <div class="col-sm" style="float:right;padding-left:5px;line-height:22px;padding-top:2px;min-width:43%">
+                                <div>Опади:
+                                    <span>1%</span>
+                                </div>
+                                <div>Вологість:
+                                    <span>63%</span>
+                                </div>
+                                <div>Вітер:
+                                    <span>
+                                        <span>21 км/год</span>
+                                        <spanstyle="display:none">13 миль/год</span>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- FOOTER -->
+        <footer class="container">
+            <p class="float-right">
+                <a href="#">Back to top</a>
+            </p>
+            <p>&copy; 2017-2018 Company, Inc. &middot;
+                <a href="#">Privacy</a> &middot;
+                <a href="#">Terms</a>
+            </p>
+        </footer>
+    </main>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="../../assets/js/vendor/popper.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <script src="../../assets/js/vendor/holder.min.js"></script>
+</body>
+
 </html>
