--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
                         inGradRow.id = 'inGradRow' + ((i-1)*7 + j)
                         inGradRow.className = 'mx-auto'
 
-                        var span1 = document.createElement('div');
+                        var span1 = document.createElement('span');
                         span1.appendChild(document.createTextNode(getRandomInt(5,15)))
                         inGradRow.appendChild(span1)
 
-                        var span2 = document.createElement('div');
+                        var span2 = document.createElement('span');
                         span2.appendChild(document.createTextNode('°C'))
                         inGradRow.appendChild(span2)
 
