--- a/index.html
+++ b/index.html
@@ -21,38 +21,25 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-            <a class="navbar-brand" href="#">Top navbar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="http://getbootstrap.com/docs/4.1/examples/navbar-static/#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="http://getbootstrap.com/docs/4.1/examples/navbar-static/#">Link</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="http://getbootstrap.com/docs/4.1/examples/navbar-static/#">Disabled</a>
-                </li>
-              </ul>
-              <form class="form-inline mt-2 mt-md-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
+        <nav class="navbar navbar-expand-md navbar-dark mb-4 xxx">
+            <div class="container w-50">
+                <i class="navbar-brand wi wi-day-cloudy"><span> Прогноз Погоды</span></i>
+                <form class="form-inline mt-2 mt-md-0">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Город" aria-label="Search">
+                    <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Поиск</button>
+                </form>
+                </div>
             </div>
           </nav>
         </header>
 
-        <div class="container my-5 w-75">
+        <div class="container my-5 w-50">
             <div class="row align-items-center image" id="main-info">
-                <div class="col-lg-6">
+                <div class="col-lg-7">
                     <div class="row" id="main-temp"><i class="wi wi-night-sleet" id=""><span> 17°C</span></i></div>
-                    <div class="row" id="main-date"><span>Харьков ПТ 05.10.18</span></div>
+                    <div class="row" id="main-date"><span>Харьков Пт 05.10.18</span></div>
                 </div>
-                <div class="col-lg">
+                <div class="col-lg" id="extra">
                     <div class="row my-2">
                         <div class="col-lg">
                             <span>Осадки:</span>
@@ -84,6 +71,18 @@
                         </div>
                     </div>    
                 </div>
+            </div>
+        </div>
+
+        <div class="container w-50">
+            <div class="row">
+                <dir class="col week"><span>Пн</span></dir>
+                <dir class="col week"><span>Вт</span></dir>
+                <dir class="col week"><span>Ср</span></dir>
+                <dir class="col week"><span>Чт</span></dir>
+                <dir class="col week"><span>Пт</span></dir>
+                <dir class="col week"><span>Сб</span></dir>
+                <dir class="col week"><span>Вс</span></dir>
             </div>
         </div>
 
