--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                 <i class="navbar-brand wi wi-day-cloudy"><span> Прогноз Погоды</span></i>
                 <form class="form-inline mt-2 mt-md-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Город" aria-label="Search">
-                    <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Поиск</button>
+                    <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">
+                        Поиск
+                    </button>
                 </form>
                 </div>
             </div>
@@ -36,7 +38,7 @@
         <div class="container my-5 w-50">
             <div class="row align-items-center image" id="main-info">
                 <div class="col-lg-7">
-                    <div class="row" id="main-temp"><i class="wi wi-night-sleet" id=""><span> 17°C</span></i></div>
+                    <div class="row" id="main-temp"><i class="wi wi-night-sleet"><span> 17°C</span></i></div>
                     <div class="row" id="main-date"><span>Харьков Пт 05.10.18</span></div>
                 </div>
                 <div class="col-lg" id="extra">
@@ -74,6 +76,11 @@
             </div>
         </div>
 
+        <!-- <div class="container w-50 my-5 month-but">
+            <button class="btn btn-outline-warning my-2 my-sm-0" type="button">
+                Отркыть погоду на месяц
+            </button>
+        </div> -->
         <div class="container w-50">
             <div class="row">
                 <dir class="col week"><span>Пн</span></dir>
