--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="col-lg-8 col-lg-offset-3">
                 
                     <form class="form-inline mt-2 mt-md-0">
-                        <input list="cities" name="city">
+                        <input list="cities" name="city" placeholder=" Город">
                         <datalist id="cities">
                             <option value="Харьков">
                             <option value="Киев">
