--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item">
                         <span class="my-auto mx-auto" id="btn-week"> Неделя</span>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item selected">
                         <i class="glyphicon glyphicon-calendar" id="btn-month"><span> Месяц</span></i>
                     </li>
                 </ul>
