--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     <i class="navbar-brand wi wi-day-cloudy"><span><b> Прогноз Погоды</b></span></i>
                 </div>
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <span class="my-auto mx-auto" id="btn-week"> Неделя</span>
+                    <li class="nav-item" id="btn-week">
+                        <span class="my-auto mx-auto"> Неделя</span>
                     </li>
-                    <li class="nav-item selected">
-                        <i class="glyphicon glyphicon-calendar" id="btn-month"><span> Месяц</span></i>
+                    <li class="nav-item selected" id="btn-month">
+                        <i class="glyphicon glyphicon-calendar"><span> Месяц</span></i>
                     </li>
                 </ul>
                 <div class="col-lg-8 col-lg-offset-3">
