--- a/index.html
+++ b/index.html
@@ -23,13 +23,21 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark mb-4 xxx">
             <div class="container w-75">
-                <div class="col-lg-4">
-                    <i class="navbar-brand wi wi-day-cloudy"><span> Прогноз Погоды</span></i>
+                <div class="col-lg-3">
+                    <i class="navbar-brand wi wi-day-cloudy" id="navbar-brand" onclick="history.go(0)"><span><b> Прогноз Погоды</b></span></i>
                 </div>
-                <div class="col-lg-8 col-lg-offset-4">
+                <ul class="navbar-nav">
+                    <li class="nav-item" id="btn-week">
+                        <span class="my-auto mx-auto"> Неделя</span>
+                    </li>
+                    <li class="nav-item selected" id="btn-month">
+                        <i class="glyphicon glyphicon-calendar"><span> Месяц</span></i>
+                    </li>
+                </ul>
+                <div class="col-lg-8 col-lg-offset-3">
                 
                     <form class="form-inline mt-2 mt-md-0">
-                        <input list="cities" name="city">
+                        <input list="cities" name="city" placeholder=" Город">
                         <datalist id="cities">
                             <option value="Харьков">
                             <option value="Киев">
@@ -131,15 +139,15 @@
 
         <div class="container w-75 my-4 month-but">
             <div class="mx-auto" id="date">
-                    <button class="btn btn-warning my-2 my-sm-0" data-toggle="tooltip" title="Предыдущий месяц" type="button" onclick="changeDate(0)">
+                    <button class="btn my-2 my-sm-0 control" data-toggle="tooltip" title="Предыдущий месяц" type="button" onclick="changeDate(0)">
                         <
                     </button>
-                    <button class="btn btn-warning my-2 my-sm-0" data-toggle="tooltip" title="Сегодня" type="button" onclick="setCurDate()">
+                    <button class="btn my-2 my-sm-0 control" data-toggle="tooltip" title="Текущий месяц" type="button" onclick="setCurDate()">
                         <span class="glyphicon glyphicon-calendar"></span>
                     </button>
                     <input type="number" data-toggle="tooltip" title="Месяц" min="1" max="12" id="date-month">
                     <input type="number" data-toggle="tooltip" title="Год"size="2" min="1900" max="2100" id="date-year">
-                    <button class="btn btn-warning my-2 my-sm-0" data-toggle="tooltip" title="Следующий месяц"type="button" onclick="changeDate(1)">
+                    <button class="btn my-2 my-sm-0 control" data-toggle="tooltip" title="Следующий месяц"type="button" onclick="changeDate(1)">
                         >
                     </button>
             </div>
