--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                     <i class="navbar-brand wi wi-day-cloudy" id="navbar-brand" onclick="history.go(0)"><span><b> Прогноз Погоды</b></span></i>
                 </div>
                 <ul class="navbar-nav">
-                    <li class="nav-item" id="btn-week">
+                    <li class="nav-item selected" id="btn-week">
                         <span class="my-auto mx-auto"> Неделя</span>
                     </li>
-                    <li class="nav-item selected" id="btn-month">
+                    <li class="nav-item" id="btn-month">
                         <i class="glyphicon glyphicon-calendar"><span> Месяц</span></i>
                     </li>
                 </ul>
@@ -59,7 +59,7 @@
         <div class="container my-3 w-75">
             <div class="row align-items-center" id="main-info">
                 <div class="col-lg-5">
-                    <div class="row" id="main-temp"><i class="wi wi-night-sleet"><span id='main-temp-span'></span></i></div>
+                    <div class="row" id="main-temp"><i class="wi" id="main-wi"><span id='main-temp-span'></span></i></div>
                     <div class="row" id="main-date"><span id='main-date-span'></span></div>
                 </div>
                 <div class="col-lg-6" id="extra">
